--- a/client/src/App.css
+++ b/client/src/App.css
@@ -99,6 +99,13 @@ h4 {
   transform: translate(-50%, -50%);
 }
 
+#profile-div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* Loader */
 .loader {
   display: block;
