Fixed frontend issue within UserProfile.js Avoided console.logs within route /signup

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,6 +113,13 @@ h4 {
   transform: translate(-50%, -50%);
 }
 
+#user-profile-div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* Loader */
 .loader {
   display: block;
