--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,12 +150,25 @@ h4 {
   }
 }
 
-.footer {
+/* .footer {
   margin-top: 1rem;
-  /* padding: 1rem; */
+ padding: 1rem;
   position: fixed;
   bottom: 0;
   left: 0;
+  width: 100%;
+  text-align: center;
+  height: 60px;
+  box-shadow: 2px 2px black, -1em 0 0.3em #44494b;
+} */
+
+.footer {
+  margin-top: 1rem;
+  /* padding: 1rem; */
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   text-align: center;
   height: 60px;
