--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Anton&family=Big+Shoulders+Stencil+Display:wght@500;700;800&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Big+Shoulders+Stencil+Display:wght@500;700;800&family=Kaushan+Script&display=swap");
 
+html,
+body {
+  height: 100%;
+}
 a {
   color: black !important;
 }
