--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,8 @@ h4 {
 }
 
 .auth-card {
-  padding: 20px;
+  /* padding: 20px; */
+  padding: 10px 20px 20px 20px;
   text-align: center;
   max-width: 400px;
   margin: 10px auto;
