--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,10 +2,15 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Anton&family=Big+Shoulders+Stencil+Display:wght@500;700;800&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Big+Shoulders+Stencil+Display:wght@500;700;800&family=Kaushan+Script&display=swap");
 
-/* html,
 body {
-  height: 100%;
-} */
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
 
 a {
   color: black !important;
@@ -26,13 +31,13 @@ h4 {
 }
 
 .my-card {
-  margin-top: 30px;
+  margin-top: 40px;
   min-height: 95vh;
 }
 
 .auth-card {
-  /* padding: 20px; */
-  padding: 10px 20px 20px 20px;
+  padding: 20px;
+  /* padding: 10px 20px 20px 20px; */
   text-align: center;
   max-width: 400px;
   margin: 10px auto;
@@ -169,16 +174,21 @@ h4 {
   box-shadow: 2px 2px black, -1em 0 0.3em #44494b;
 } */
 
+.page-footer {
+  color: black !important;
+}
+
 .footer {
+  background-color: white;
   margin-top: 10rem;
   /* margin-top: 10rem; */
-  /* padding: 1rem; */
+  padding: 1rem;
   /* position: absolute; */
-  position: fixed;
+  /* position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100%;
+  width: 100%; */
   text-align: center;
   /* height: 60px; */
   box-shadow: 2px 2px black, -1em 0 0.3em #44494b;
